src/test/asg1/errors/capital-error2.j
class Main {

Void main(){
    Int x; int y; Int z;
    x=1;
}

}

class abc {

}

